--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "embla-carousel-react": "^8.5.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "15.1.5",
