--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query-devtools": "5.0.0-alpha.91",
     "@vidstack/react": "^1.12.13",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
